--- a/style.css
+++ b/style.css
@@ -453,3 +453,30 @@ nav .fa-solid{
     margin-top: -40px;
     display: block;
 }
+
+:root {
+    scroll-behavior: smooth;
+  }
+  
+  .stt {
+    position: fixed;
+    right: 1rem;
+    bottom: 2rem;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 25%;
+    background: #ff004f url("data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 384 512'%3E%3Cpath fill='currentColor' d='M352 352c-8.188 0-16.38-3.125-22.62-9.375L192 205.3l-137.4 137.4c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25C368.4 348.9 360.2 352 352 352z'%3E%3C/path%3E%3C/svg%3E") center no-repeat;
+    opacity: 0.7;
+  }
+  
+  .stt:hover {
+    opacity: 1;
+  }
+  
+  .stt:focus {
+    opacity: 0.9;
+  }
+  
+  .stt:active {
+    opacity: 1;
+  }
